--- a/submissions/Westley_Dana/Assignment3/Assignment3.Rmd
+++ b/submissions/Westley_Dana/Assignment3/Assignment3.Rmd
@@ -2,7 +2,7 @@
 title: "Assignment 3"
 author: "Dana Westley"
 date: "Due May 10, 2017"
-output: github_document
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
