--- a/submissions/Westley_Dana/Assignment3/Assignment3.Rmd
+++ b/submissions/Westley_Dana/Assignment3/Assignment3.Rmd
@@ -24,12 +24,14 @@ world <- map_data("world") %>%
   as_tibble
 
 library(RColorBrewer)
-g2 <- ggplot(data, aes(map_id = Country)) +
-  geom_map(aes(fill = TotalFert2015), map = world) +
+g2 <- data %>%
+  mutate(Fert_cut = cut_interval(TotalFert2015, 6)) %>% 
+  ggplot(aes(map_id = Country)) +
+  geom_map(aes(fill = Fert_cut), map = world) +
   expand_limits(x = world$long, y = world$lat) + 
   labs(title = "2015 World Fertility", x = "", y = "")+ 
-  scale_fill_gradient(low = "indianred1", high = "firebrick4", name = "Avg. No. of Children") + 
   theme(plot.title = element_text(hjust = 0.5, size = 20)) + 
+  scale_fill_brewer(palette = "Reds", na.value = "grey50", name = "Avg. No. of Children") +
   ylim(-75,100)
 print(g2)
 #Some countries missing
@@ -47,12 +49,11 @@ g3 <- ggplot(fertmelt, aes(map_id = Country)) +
   geom_map(aes(fill = Fertility), map = world) +
   expand_limits(x = world$long, y = world$lat)
 
-print(g3)
 
 ```
 
 #Interactive Visual
-```{r}
+```{r, cache=TRUE}
 #plotly
 library(plotly)
 ggplotly(g2)
@@ -61,4 +62,4 @@ ggplotly(g2)
 
 ```
 #The Story
-
+While this interactive 
