--- a/submissions/camacho_jonathan/A3/02_report.Rmd
+++ b/submissions/camacho_jonathan/A3/02_report.Rmd
@@ -64,16 +64,17 @@ select_continent <- reactive({
 
 #### Description
 
-Demographers have pondered for decades the factors that affect populations’ life expectancy. In this brief analysis, I explore the connection between population density and life expectancy. I  expect to find a negative correlation between both variables. To conduct the analysis, I created an API that downloads data from the data set Gapminder; making the analysis fully reproducible. Furthermore, I use the data set Geonames create a tidy data set with conventional country names.
+
+Demographers have pondered for decades the factors that affect populations’ life expectancy. In this brief analysis, I explore the connection between population density and life expectancy. I expect to find a negative correlation between both variables. The data for this analysis was extracted using an API that downloads data from the data set Gapminder; making the analysis entirely reproducible. The Gapminder dataset was merged with variables from the Geonames dataset to create a tidy data set with conventional country names.
 
 
-The first plot, “Life Expectancy by Population Density,” does not indicate a clear negative correlation between life expectancy and population density. Contrary, it seems to suggest that as population density increases longevity increases; contrary to the expectations expresses above. Several factors can account for this findings. It is feasible that the expected relationship between population density and life expectancy is not present in the data set that I used. Similarly, life expectancy could be affected by other factors such as access to health care, proper nutrition, and subjective factors such as low levels of stress and high levels of happiness. The second plot, “Country Based Life Expectancy by Population Density” allows the user to select the continent to be plotted. Independently of the continent, the same findings hold along with the same possible explanations. 
+The first graph, “Life Expectancy by Population Density,” does not indicate a clear negative correlation between life expectancy and population density. Contrary, it seems to suggest that as population density increases longevity increases; contrary to the expectations expressed above. Several factors can account for this findings. It is feasible that the expected relationship between population density and life expectancy is not present in the dataset. Similarly, life expectancy could be positively affected by other factors such as access to health care, proper nutrition, and subjective factors; such as low levels of stress and high levels of happiness; outweighing the negative effect of population dentition of life expectancy. The second graph, “Country Based Life Expectancy by Population Density” allows the user to select the continent to be graphed. Independently of the continent, the same findings and possible explanations hold. Population density does not seem to be negatively correlated with life expectancy, but both variables seem to be positively correlated. 
 
 
-Several reasons guided my choice of graphical forms and method for delivery. I chose a scatter plot because the size of the data to be projected in the plot. Similarly, using points and a smooth line to represent data allowed me to show the effect of population density on life expectancy as a position-channel which is one of the most effective mental-visual tasks; allowing readers to extract information more accurately from plots. Furthermore, I modified the alpha parameter for the points to facilitate visualization when points overlap. 
+Several reasons guided my choice of graphical forms and method for delivery the graphs. I chose a scatter plot because of the size of the data, a number of data points to be projected in the graph. Furthermore, using points and smooth lines to represent data allowed me to show the effect of population density on life expectancy as a position channel which is one of the most effective mental-visual tasks; allowing readers to extract information more accurately from graphs. Furthermore, I modified the alpha parameter for the points to facilitate visualization when points overlap. 
 
 
-After noticing, in the first plot, the counter-intuitive relationship between pollution density and life expectancy, the question to follow is if the relationship is a global trend or is a regional trend. Thus, adding interactivity to the report allows the user to explore the pattern in different regions such as a continent. This possibility to interact with the data also enhances explorations, attention, and memorization of the findings. I wanted to show the patterns by countries, unfortunately, there are not enough data points in the data set for such visualization; thus, I used the continents.
+After noticing, in the first graph, the counter-intuitive relationship between population density and life expectancy, the question to ask is if the found link is a global trend or is a regional trend. I considered adding interactivity to the graphs as a good way to facilitate the users’ exploration of this question in the data. Thus, users can select the continent for which they want the graph to reflect the relationship between population density and life expectancy. Moreover, allowing the user to interact with the data also enhances explorations, attention, and memorization of the findings. A better approach would have been showing country patterns. Unfortunately, there are not enough data points, at the country level, in the data set for such visualization.
 
 Column {data-width=350}
 -----------------------------------------------------------------------
