--- a/submissions/kim_soowan/Assignment 3/interactive_graphics.Rmd
+++ b/submissions/kim_soowan/Assignment 3/interactive_graphics.Rmd
@@ -3,8 +3,7 @@ title: "Assignment 3: Interactive graphics"
 author: "Soo Wan Kim"
 date: "May 5, 2017"
 output:
-  html_document:
-    keep_md: true
+  html_document
 ---
 
 ## The North Korean Diaspora
